// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowWithTextInput renders 1`] = `
<TouchableHighlight
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      Object {
        "height": 54,
      },
      undefined,
      undefined,
    ]
  }
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 12.8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12.8,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <TextInput
        defaultValue={undefined}
        keyboardType={undefined}
        onChangeText={[Function]}
        onFocus={undefined}
        placeholder={undefined}
        style={
          Array [
            Object {
              "flex": 1,
            },
            undefined,
          ]
        }
        testID={undefined}
      />
    </View>
  </View>
</TouchableHighlight>
`;

exports[`RowWithTextInput renders with a title 1`] = `
<TouchableHighlight
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      Object {
        "height": 54,
      },
      undefined,
      undefined,
    ]
  }
  testID={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 12.8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12.8,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontWeight": "600",
              },
              undefined,
            ],
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Title
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Object {
              "height": 50,
              "width": 50,
            }
          }
        >
          <TextInput
            defaultValue={undefined}
            keyboardType={undefined}
            onChangeText={[Function]}
            onFocus={undefined}
            placeholder={undefined}
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            testID={undefined}
          />
        </View>
      </View>
    </View>
  </View>
</TouchableHighlight>
`;
